# test_3d_game

./: .cmake-format.py  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: background.frag  background.vert  lit.frag  plane.frag  shader.frag  shader.vert  unlit.frag  unlit_shadow.frag  vert_uniform.vert  vert_uniform_bloated.vert
src/: Camera.cpp  Camera.h  SpaceShipInSpaceScene.cpp  main.cpp
